--- a/A/Altice/Altice_BlackFriday2020/ads/OPT_SECO_49(60Mbps)/300x250/300x250.html
+++ b/A/Altice/Altice_BlackFriday2020/ads/OPT_SECO_49(60Mbps)/300x250/300x250.html
@@ -148,10 +148,12 @@
 amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("frameVideo1", "TEXT", "300x250_OPT_FALL_ACQ_INT_Starting_25Yr1_NonSub_Cp_Frame_1.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame3.png");
+amo.registerAttribute("frameVideo1", "TEXT", "Shopping_Cart.mp4");
+amo.registerAttribute("frameVideo2", "IMAGE", "Tag_Black_Friday.mp4");
+amo.registerAttribute("frameImage21","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame3.png");
 amo.registerAttribute("frameImage3","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
-amo.registerAttribute("frameImage4","IMAGE","300x250_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame5.png");
-amo.registerAttribute("frameText1", "TEXT", "Switch to a faster Internet connection");
+amo.registerAttribute("frameVideo4", "TEXT", "Tag_Season.mp4");
+amo.registerAttribute("frameText1", "TEXT", "Season of<br><font class='coloredText'>Black Friday</font> Deals");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 42px;left: 49px;font-size: 19.5px;line-height: 1;color: #fff;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 85px;left: 44px;width: 160px;color: #fff;line-height: 1;'><font style='font-size: 65px;letter-spacing: -1.2px;'>$49</font><font style='margin-left: 4px;font-size: 11px;display: inline-block;vertical-align: 25px;line-height: 1.1;'>82/<br>mo.</font><div class='AlticeRegular' style='margin: 1px 0 0 6px;font-size: 10px;line-height: 1.1;'>Plus taxes, fees &<br>optional services</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top:186px;left:11px;font-size:8px;line-height:1.15;color: #fff;'>Wired connection up to 60 Mbps.<br>WiFi speeds may vary.</div>");
@@ -183,7 +185,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
     <div id="beam5" class="beam" style="border-radius: 30px;background-image: linear-gradient(to left, #24d9c3 60%, #0084d6);"><div></div><div></div></div>
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
     <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground" style="display:none;"></div>
-    <div id="frameImage2" class="asset frameImage" data-image="frameImage2"></div>
+    <div id="frameImage2" class="frameImage" style="top: -66px;left: 202px;width: inherit;height: inherit;"><video muted playsinline autoplay style="width: 100px;height: inherit;"></video></div>
+    <div id="frameImage21" class="asset frameImage" data-image="frameImage21"></div>
     <div id="frameText21" class="frameText">!{frameText21}</div>
     <div id="frameText22" class="frameText">!{frameText22}</div>
     <div id="frameText23" class="frameText">!{frameText23}</div>
@@ -191,7 +194,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
     <div id="frameText31" class="frameText">!{frameText31}</div>
     <div id="frameText32" class="frameText">!{frameText32}</div>
     <div id="frameText33" class="frameText">!{frameText33}</div>
-    <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div>
+    <!-- <div id="frameImage4" class="asset frameImage" data-image="frameImage4"></div> -->
+    <div id="frameImage4" class="frameImage" style="top: -30px;left: 166px;width: inherit;height: inherit;"><video muted playsinline autoplay style="width: 145px;height: inherit;"></video></div>
     <div id="frameText41" class="frameText">!{frameText41}</div>
     <div id="frameText42" class="frameText">!{frameText42}</div>
     <div id="frameText43" class="frameText">!{frameText43}</div>
@@ -215,7 +219,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
       background-color:#000;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top: 0px;left: 0px;width: inherit;height: inherit;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameVideo1" style="top: 55px;left: -100px;width: 400px;height: auto;"><video muted playsinline autoplay style="width:100%;"></video></div>
       <!-- <div id="videoOverlay" style="top:0px; left:0px; width:inherit; height:inherit; background-color:rgba(0,0,0,0.25)"></div> -->
       <!-- <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div> -->
       <!-- <div id="shape1"
@@ -237,11 +241,11 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
       <div id="frameText1" class="text AlticeBold"
         data-text="frameText1"
         data-style="text-align:center;"
-        style="top: 4px;
+        style="top: 18px;
           left: 20px;
           width: 260px;
           height: 60px;
-          font-size: 24.6px;
+          font-size: 23px;
           line-height: 1;
           color:#fff;">
       </div>
@@ -299,7 +303,25 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
+        var loadVideo = function(video, path, flag) {
+          if(video && path) {
+            if(!flag) {
+              var videoLoadFlag = false
+              video.onplay = function() {
+                if(!videoLoadFlag) {
+                  this.pause();
+                  this.currentTime = 0;
+                }
+                videoLoadFlag = true;
+              }
+              video.src = path;
+            }
+            setTimeout(function(){ video.src = path; }, (flag ? 800 : 500));
+          }
+        }
+        loadVideo(ad.layers.frameVideo1.querySelector('video'), adData.frameVideo1, true);
+        loadVideo(ad.layers.frameImage2.querySelector('video'), adData.frameVideo2);
+        loadVideo(ad.layers.frameImage4.querySelector('video'), adData.frameVideo4);
 
         textUpdate();
         gsap.set('#shape1',{top:-120,left:-18,width:60,height:120,y:370});
@@ -339,6 +361,14 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
           .to('#frameText'+frame+'2', {delay:0.4, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:0.4, x:0,y:0});
         }
+        var videoFrameAnimation = function(frame){
+          var video = ad.root.querySelector('#frameImage' + frame + ' video');
+          var playVideo = function() { if(video) { video.play(); } }
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0, onComplete:playVideo})
+          .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
+          .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
+        }
         var generalFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
@@ -366,7 +396,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
           ad.layers.cta.classList.remove('ctaWhite');
           gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: videoFrameAnimation, onCompleteParams:[4]})
           // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.7, opacity:0, onComplete: animateFrame5}));
         }
         var animateFrame3 = function(flag){
@@ -379,18 +409,21 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 165px;left: 23px;
         var animateFrame2 = function(flag){
           var frameId = 2;
           // ad.layers.cta.classList.add('ctaWhite');
+          gsap.set('#frameImage21', {x:'0'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalLeftFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: videoFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage21', {delay:0.2, autoAlpha:1})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.7, opacity:0, onComplete: animateFrame3}));
+          gsap.to('#frameImage21', (flag==true?{}:{opacity:0,ease:'none', delay:2.7}));
         }
         var animateFrame1 = function(flag){
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+            gsap.timeline({defaults:{ease: "power2.Out", duration:0.2}})
             .to('#frameText1', {autoAlpha:1})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            gsap.timeline({defaults:{ease: "power2.Out", duration:0.2}})
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.2, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         gsap.delayedCall(.8, animateFrame1);
