--- a/A/Altice/Altice_BlackFriday2020/ads/OPT_SECO_49(60Mbps)/728x90/728x90.html
+++ b/A/Altice/Altice_BlackFriday2020/ads/OPT_SECO_49(60Mbps)/728x90/728x90.html
@@ -128,12 +128,12 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
+amo.registerAttribute("frameVideo1", "TEXT", "Shopping_Cart.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","728x90_SECO_AUGUST_ACQ_INT_60Mb_491Yr_Image_frame4.png");
-amo.registerAttribute("frameImage4","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Switch to a faster<br>Internet connection");
+amo.registerAttribute("frameImage4", "TEXT", "1x1.png");
+amo.registerAttribute("frameText1","TEXT","Season of<br><font class='coloredText'>Black Friday</font> Deals");
 amo.registerAttribute("frameText21", "TEXT", "<div style='top: 12px;left: 23px;font-size: 26.2px;line-height: 0.9;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText22", "TEXT", "<div style='top: 3px;left: 132px;width: 350px;line-height: 1;'><font style='font-size: 84px;' class='coloredText'>$49</font><font style='margin-left: 5px;font-size: 13px;display: inline-block;vertical-align: 34px;line-height: 1.2;'>82/<br>mo.</font><div class='AlticeRegular' style='position: absolute;top: 47px;left: 156px;font-size: 10px;'>Plus taxes, fees & optional services.</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div class='AlticeRegular' style='top:61px;left:288px;font-size:10px;line-height:1.2;'>Wired connection up to 60 Mbps.<br>WiFi speeds may vary.</div>");
@@ -142,7 +142,7 @@ amo.registerAttribute("frameText32", "TEXT", "<div style='top: 53px;left: 22px;f
 amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText41", "TEXT", "<div style='top: 12px;left: 23px;font-size: 26.2px;line-height: 0.9;'>60 Mbps<br>Internet</div>");
 amo.registerAttribute("frameText42", "TEXT", "<div style='top: 3px;left: 132px;width: 350px;line-height: 1;'><font style='font-size: 84px;' class='coloredText'>$49</font><font style='margin-left: 5px;font-size: 13px;display: inline-block;vertical-align: 34px;line-height: 1.2;'>82/<br>mo.</font><div class='AlticeRegular' style='position: absolute;top: 47px;left: 156px;font-size: 10px;'>Plus taxes, fees & optional services</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;transform: scale(0.62);transform-origin: top left;'><div class='bulletedText'>Get the first 3 mos. for just <font style='color: #0084d6;'>$9.95/mo.</font></div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;transform: scale(0.62);transform-origin: top left;'><div class='bulletedText'>Get the first 3 mos. for just $9.95/mo.</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -184,7 +184,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
         left: 572px;
         width: 120px;
         height: 30px;
-        font-size: 19px;
+        font-size: 17px;
         overflow: hidden;
         border-radius: 15px;
         padding: 2px;
@@ -197,8 +197,8 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
       background-color:#000;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <!-- <div id="frameVideo1" style="top: -15px;left: 423px;width: 110px;height: 100px;"><video muted playsinline autoplay style="width:100%;"></video></div> -->
-      <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
+      <div id="frameVideo1" style="top: -6px;left: -98px;width: 273px;height: 273px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <!-- <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div> -->
       <!-- <div id="shape1"
         style="top: 0;
           left: -23px;
@@ -218,7 +218,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
       <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
         style="top: 5px;
-          left: 25px;
+          left: 168px;
           width: 400px;
           height: 80px;
           font-size: 26px;
@@ -235,7 +235,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
           left: 572px;
           width: 120px;
           height: 30px;
-          font-size: 19px;
+          font-size: 17px;
           overflow: hidden;
           border-radius: 15px;
           padding: 2px;
@@ -278,7 +278,23 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        // setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
+        var loadVideo = function(video, path, flag) {
+          if(video && path) {
+            if(!flag) {
+              var videoLoadFlag = false
+              video.onplay = function() {
+                if(!videoLoadFlag) {
+                  this.pause();
+                  this.currentTime = 0;
+                }
+                videoLoadFlag = true;
+              }
+              video.src = path;
+            }
+            setTimeout(function(){ video.src = path; }, (flag ? 800 : 500));
+          }
+        }
+        loadVideo(ad.layers.frameVideo1.querySelector('video'), adData.frameVideo1, true);
 
         textUpdate();
         gsap.set('#shape1',{top:-110,left:-17,width:36,height:110,y:200});
@@ -353,13 +369,17 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 66px;left: 289px;
         }
         var animateFrame1 = function(flag){
           gsap.set('#frameText1', {x: '0'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText1', {autoAlpha:1})
-          .to('#frame1', (flag==true?{}:{delay:3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
-          // gsap.to('#shape1', {y:'0',ease:'none',duration:0.7,delay:1.6})
-          // gsap.to('#shape2', {y:'0',ease:'none',duration:0.7,delay:1.8})
-          // gsap.to('#shape3', {y:'0',ease:'none',duration:0.7,delay:1.8})
-          // gsap.to('#shape4', {y:'0',ease:'none',duration:0.7,delay:2.1})
+          ad.layers.frameVideo1.querySelector('video').onplay = function(){
+            var video = this;
+            var nextFrame = function(){
+              video.pause();
+              gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+              .to('#frame1', (flag==true?{}:{delay:2.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            }
+            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+            .to('#frameText1', {autoAlpha:1})
+            .to('#frameText1', {delay:0.3, autoAlpha:1, onComplete:nextFrame})
+          }
         }
         gsap.delayedCall(.8, animateFrame1);
       });
