--- a/M/Microsoft/M365_Holiday_Mobile_2020/ads/300x250/PPT/M365_MobileFY21Q2ConsRefresh_USA_300x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Holiday_Mobile_2020/ads/300x250/PPT/M365_MobileFY21Q2ConsRefresh_USA_300x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
@@ -258,7 +258,7 @@ var startBanner = function(){
 										layers.cta.children[0].regX = 0;
 										layers.cta.children[0].regY = 0;
 										layers.cta.children[0].graphics.clear();
-										layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 30);
+										layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 35);
 										if(position == 'right') {
 											layers.cta.x = adWidth - ctaWidth;
 											layers.txtCta.x = adWidth - ctaWidth + 15;
@@ -304,7 +304,7 @@ var startBanner = function(){
 										});
 									}
 						  			exportRoot.initBanner(bannerData)
-						  			// ctaAlignment('left')
+						  			ctaAlignment('left')
 							        exportRoot.runBanner();
 
 		  			exportRoot.meshtl = gsap.timeline();
