--- a/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/300x250/PPTMob/M365_MobileFY21Q2ConsRefresh_USA_300x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/300x250/PPTMob/M365_MobileFY21Q2ConsRefresh_USA_300x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
@@ -247,10 +247,12 @@ var startBanner = function(){
 						layers.cta.arrow.regX = 0;
 						layers.cta.children[0].x = 0;
 						layers.cta.children[0].y = 0;
+						layers.cta.children[0].scaleX = 1;
+						layers.cta.children[0].scaleY = 1;
 						layers.cta.children[0].regX = 0;
 						layers.cta.children[0].regY = 0;
 						layers.cta.children[0].graphics.clear();
-						layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 30);
+						layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 35);
 						if(position == 'right') {
 							layers.cta.x = adWidth - ctaWidth;
 							layers.txtCta.x = adWidth - ctaWidth + 15;
@@ -296,7 +298,7 @@ var startBanner = function(){
 						});
 					}
 		  			exportRoot.initBanner(bannerData)
-		  			// ctaAlignment('left')
+		  			ctaAlignment('left');
 			        exportRoot.runBanner();
 		  			exportRoot.meshtl = gsap.timeline();
 		  			exportRoot.meshtl.from(mesh.scale, 1, {x:0, y:0, z:0, ease: "power4.Out", onStart:function(){gsap.fromTo(mesh.rotation, {y: -0.3}, {y: 0.3, duration: 3, yoyo:true, repeat:-1, ease: "power2.inOut"});}});
